# harmonica

./: .gitignore  Makefile  README.md  Restructure.md  codexs_failure_to_fix.md  final_colab_fix.patch  pyproject.toml  requirements.txt  run_vctk_sample.py
configs/: config.yaml
configs/experiment/: baseline.yaml  ljspeech_mps.yaml  vctk_base.yaml  vctk_colab.yaml  vctk_stream.yaml
configs/model/: ar_medium.yaml  ar_small.yaml  nar_small.yaml
docs/: ROOT_CAUSE_COLAB_TRAINING.md
eval/: detect_failures.py  sentences.txt
harmonica/: __init__.py
harmonica/codec/: __init__.py  dac.py  encodec.py  interface.py
harmonica/config/: __init__.py  schema.py
harmonica/data/: __init__.py  collate.py  dataset.py  hf_vctk.py  libritts.py  ljspeech.py  sampler.py  vctk.py
harmonica/inference/: __init__.py  ar_decode.py  nar_decode.py  synthesizer.py
harmonica/model/: __init__.py  ar.py  blocks.py  duration_predictor.py  embedding.py  nar.py  speaker.py  text_encoder.py
harmonica/text/: __init__.py  normalizer.py  tokenizer.py
harmonica/training/: __init__.py  checkpoint.py  metrics.py  optimizer.py  trainer.py
harmonica/utils/: __init__.py  audio.py  compat.py  (+2 more)
notebooks/: train_colab.ipynb  train_colab_vctk.ipynb
scripts/: __init__.py  backup_hf_cache.sh  check_codebook_health.py  download_data.py  evaluate.py  export_hf_token.sh  preprocess.py  report_experiment.py  synthesize.py  train.py  train_vctk.sh  train_vctk_stream.sh
tests/: __init__.py  test_codec.py  test_config_compat.py  test_data.py  test_model.py  test_tokenizer.py  test_training_features.py
